Add link to new playlist, and fix cookie maintenance
 * The refresh token was getting deleted because Spotify's
   API doesn't return a new token with the refresh call, and
   we were always setting it to be whatever is in the response;
   in this case, undef.
 * Added a link to the new playlist on the done page. People
   weren't too sure where the new playlist was being made, so
   this should clear that up.

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -5,8 +5,11 @@ body {
   font-family: 'Helvetica Neue', sans-serif;
 }
 
-h1 {
+.titleHeading {
   color: #111;
+}
+
+h1 {
   font-size: 120px;
   font-weight: bold;
   letter-spacing: -1px;
@@ -22,7 +25,7 @@ h1 {
   vertical-align: middle;
 }
 
-a, input[type="submit"] {
+.aButton, input[type="submit"] {
   font-weight: bold;
   padding: 20px;
   border-radius: 5px;
